--- a/project1/index.html
+++ b/project1/index.html
@@ -9,26 +9,32 @@
 	<body>
 		<section class="Absolute TopLeft">
 			<div class="">
-				Top Left / Documentation
+				<a href="/documentation.html">
+					Top Left / Documentation
+				</a>
 			</div>
 		</section>
 
 		<section class="Absolute TopRight">
 			<div class="">
-				Top Right / Project About
+				<a href="/proposal.html">
+					Top Right / Project About
+				</a>
 			</div>
 		</section>
 
 		<section class="Absolute Bottom">
 			<div class="">
-
-				Bottom Project Enter
+				<a href="/project.html">
+					Bottom Project Enter
+				</a>
 			</div>
 		</section>
 
 		<section class="Absolute Center">
 			Center
 		</section>
+		<!-- TODO: Remove this once done -->
 		<script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
 		//]]></script>
