--- a/project1/index.html
+++ b/project1/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>l'eau</title>
-		<meta name="description" content="A third person open world adventure game where the player explores a mysterious desert with the end goal of building a paradise oasis for the stranded creatures in this world.">
+		<title>l'eau.web.meta</title>
+		<meta name="description" content="This website is an advertisement for l'eau website">
 		<link rel="stylesheet" href="/css/index.css" />
 	</head>
 	<body>
