Adding some animation. Seems unnecessary

--- a/project1/index.html
+++ b/project1/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>l'eau.web.meta</title>
-		<meta name="description" content="This website is an advertisement for l'eau website">
-		<link rel="stylesheet" href="/css/index.css" />
+		<meta name="description"
+						content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
+		<link rel="stylesheet"
+						href="/css/index.css" />
 	</head>
+
 	<body>
-		<section class="Absolute TopLeft">
-			<div class="">
+		<nav class="Absolute"
+						id="TopLeft">
+			<div class="S">
 				<a href="/documentation.html">
-					Top Left / Documentation
+					Documentation
 				</a>
 			</div>
-		</section>
+			</nav>
 
-		<section class="Absolute TopRight">
-			<div class="">
-				<a href="/proposal.html">
-					Top Right / Project About
-				</a>
-			</div>
-		</section>
+			<nav class="Absolute"
+							id="TopRight">
+				<div class="S">
+					<a href="/proposal.html">
+						Proposal
+					</a>
+				</div>
+				</nav>
 
-		<section class="Absolute Bottom">
-			<div class="">
-				<a href="/project.html">
-					Bottom Project Enter
-				</a>
-			</div>
-		</section>
+				<nav class="Absolute FlexCenter"
+								id="Bottom">
+					<div class="BubbleButton FlexCenter">
+						<a href="/project.html">
+						Enter
+						</a>
+					</div>
+					</nav>
 
-		<section class="Absolute Center">
-			Center
-		</section>
-		<!-- TODO: Remove this once done -->
-		<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
-		//]]></script>
+					<nav class="Absolute FlexCenter"
+									id="Center">
+
+						<div id="Icon"
+										class="Absolute">
+							</div>
+
+							<div id="Title">
+								l'eau.web.meta
+							</div>
+
+							<div id="Subtitle">
+								[lo dɑt wɛb dɑt ˈmitə]
+							</div>
+
+							<div id="Description">
+								the making of leau.web
+							</div>
+							</nav>
+
+							<script src="js/bsync.js"></script>
 	</body>
+
 </html>
