--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -35,8 +35,6 @@
 			Center
 		</section>
 		<!-- TODO: Remove this once done -->
-		<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
-		//]]></script>
+		<script src="js/bsync.js" />
 	</body>
 </html>
