Looks ok for now

--- a/project1/index.html
+++ b/project1/index.html
@@ -11,54 +11,51 @@
 	</head>
 
 	<body>
-		<nav class="Absolute"
+		<nav class="Absolute LastAppear"
 						id="TopLeft">
-			<div class="S">
-				<a href="/documentation.html">
-					Documentation
+			<a class="CircleButton FlexCenter"
+							id="Documentation"
+							href="/documentation.html">
 				</a>
-			</div>
-			</nav>
-
-			<nav class="Absolute"
-							id="TopRight">
-				<div class="S">
-					<a href="/proposal.html">
-						Proposal
-					</a>
-				</div>
+		</nav>
+		<nav class="Absolute LastAppear"
+						id="TopRight">
+			<a class="BubbleButton FlexCenter"
+							href="/proposal.html">
+				proposal
+				</a>
 				</nav>
 
-				<nav class="Absolute FlexCenter"
+				<nav class="Absolute LastAppear FlexCenter"
 								id="Bottom">
-					<div class="BubbleButton FlexCenter">
-						<a href="/project.html">
-						Enter
+					<a class="BubbleButton FlexCenter"
+									href="/project.html">
+						enter
 						</a>
-					</div>
-					</nav>
+						</nav>
 
-					<nav class="Absolute FlexCenter"
-									id="Center">
+						<nav class="Absolute FlexCenter"
+										id="Center">
 
-						<div id="Icon"
-										class="Absolute">
-							</div>
+							<div id="Icon"
+											class="Absolute">
+								</div>
 
-							<div id="Title">
-								l'eau.web.meta
-							</div>
+								<div id="Title">
+									l'eau.web.meta
+								</div>
 
-							<div id="Subtitle">
-								[lo dɑt wɛb dɑt ˈmitə]
-							</div>
+								<div id="Subtitle">
+									[lo dɑt wɛb dɑt ˈmitə]
+								</div>
 
-							<div id="Description">
-								the making of leau.web
-							</div>
-							</nav>
+								<div id="Description">
+									the making of leau.web
+								</div>
+								</nav>
 
-							<script src="js/bsync.js"></script>
+
+				<script src="js/bsync.js"></script>
 	</body>
 
 </html>
