--- a/project1/project.html
+++ b/project1/project.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/documentation.css" />
 	</head>
 	<body>
-		<section class="Absolute TopLeft">
+		<section class="Absolute TopLeft LastAppear">
 			<div class="">
 				<a href="/">
 					Back
@@ -15,7 +15,7 @@
 			</div>
 		</section>
 
-		<section class="Absolute TopRight">
+		<section class="Absolute TopRight LastAppear">
 			<div class="">
 				<a href="/proposal.html">
 					Top Right / Project About
@@ -23,7 +23,7 @@
 			</div>
 		</section>
 
-		<section class="Absolute Bottom">
+		<section class="Absolute Bottom LastAppear">
 			<div class="">
 				<a href="/project.html">
 					Bottom Project Enter
