--- a/project1/index.html
+++ b/project1/index.html
@@ -1,61 +1,37 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="utf-8" />
-		<title>l'eau.web.meta</title>
-		<meta name="description"
-						content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
-		<link rel="stylesheet"
-						href="/css/index.css" />
-	</head>
+<head>
+	<meta charset="utf-8" />
+	<title>l'eau.web.meta</title>
+	<meta name="description" content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
+	<link rel="stylesheet" href="/css/index.css" />
+</head>
 
-	<body>
-		<nav class="Absolute LastAppear"
-						id="TopLeft">
-			<a class="CircleButton FlexCenter"
-							id="Documentation"
-							href="/documentation.html">
-				</a>
-		</nav>
-		<nav class="Absolute LastAppear"
-						id="TopRight">
-			<a class="BubbleButton FlexCenter"
-							href="/proposal.html">
-				proposal
-				</a>
-				</nav>
+<body>
 
-				<nav class="Absolute LastAppear FlexCenter"
-								id="Bottom">
-					<a class="BubbleButton FlexCenter"
-									href="/project.html">
-						enter
-						</a>
-						</nav>
+	<nav class="Absolute LastAppear" id="TopLeft">
+		<a class="CircleButton FlexCenter" id="Documentation" href="/documentation.html"> </a>
+	</nav>
 
-						<nav class="Absolute FlexCenter"
-										id="Center">
+	<nav class="Absolute LastAppear" id="TopRight">
+		<a class="BubbleButton FlexCenter" href="/proposal.html">
+			proposal
+		</a>
+	</nav>
 
-							<div id="Icon"
-											class="Absolute">
-								</div>
-
-								<div id="Title">
-									l'eau.web.meta
-								</div>
-
-								<div id="Subtitle">
-									[lo dɑt wɛb dɑt ˈmitə]
-								</div>
-
-								<div id="Description">
-									the making of leau.web
-								</div>
-								</nav>
-
-
-				<script src="js/bsync.js"></script>
-	</body>
+	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
+		<a class="BubbleButton FlexCenter" href="/project.html">
+			enter
+		</a>
+	</nav>
+	<nav class="Absolute FlexCenter" id="Center">
+		<div id="Icon" class="Absolute"> </div>
+		<div id="Title"> l'eau.web.meta </div>
+		<div id="Subtitle"> [lo dɑt wɛb dɑt ˈmitə] </div>
+		<div id="Description"> the making of leau.web </div>
+	</nav>
+	<script src="js/bsync.js"></script>
+</body>
 
 </html>
