--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>l'eau</title>
-		<meta name="description" content="A third person open world adventure game where the player explores a mysterious desert with the end goal of building a paradise oasis for the stranded creatures in this world.">
-		<link rel="stylesheet" href="/css/documentation.css" />
-	</head>
-	<body>
-		<section class="Absolute TopLeft">
-			<div class="">
-				<a href="/">
-					Back
-				</a>
-			</div>
-		</section>
 
-		<section class="Absolute TopRight">
-			<div class="">
-				<a href="/proposal.html">
-					Top Right / Project About
-				</a>
-			</div>
-		</section>
+<head>
+	<meta charset="utf-8">
+	<link rel="shortcut icon" href="/media/favicon.png">
+	<title>eau</title>
+	<link rel="stylesheet" href="/css/global.css" />
+	<link rel="stylesheet" href="/css/documentation.css" /> </head>
 
-		<section class="Absolute Bottom">
-			<div class="">
-				<a href="/project.html">
-					Bottom Project Enter
-				</a>
-			</div>
-		</section>
+<body>
+	<nav class="Absolute" id="TopLeft">
+		<a class="CircleButton FlexCenter" id="Back" href="/"> </a>
+	</nav>
+	<section class="Absolute" id="Center">
+		<h1>
+				documentation
+		</h1>
+		<hr/>
+		<h2>notes</h2>
+		<ul>
+			<li> Everything in this website was built from scratch. </li>
+			<li> The changelog content was updated as the work is done. The date was generated using my custom editor extension for Atom. The source can be found <a href="https://github.com/louisgv/dotfiles/blob/jojo/.atom/init.coffee">here</a>. </li>
+			<li> l'eau means "water" in French, hence the droplet animation. </li>
+			<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which was also my design. </li>
+		</ul>
+		<h2>changelog</h2>
+		<ul>
+			<li> 9/3/2017, 2:29:39 PM: Refactor animation </li>
+			<li> 9/3/2017, 2:08:44 PM: Add license notice </li>
+			<li> 9/3/2017, 1:41:23 PM: Finalize styling for documentation.html </li>
+			<li> 9/3/2017, 11:30:12 AM: Finalize styling for proposal.html </li>
+			<li> 9/3/2017, 9:27:30 AM: Refactor reusable style into global.css </li>
+			<li> 9/3/2017, 8:10:27 AM: Finalize layout for index.html </li>
+			<li> 8/3/2017, 3:20:18 PM: Finalize page design and conceptualization </li>
+			<li> 8/3/2017, 2:30:25 PM: Finalize content for each pages </li>
+			<li> 8/3/2017, 9:45:18 AM: Initialize project and planning for layout </li>
+		</ul>
+	</section>
 
-		<section class="Absolute Center">
-			Center
-		</section>
-		<!-- TODO: Remove this once done -->
-		<script src="js/bsync.js" />
-	</body>
+</body>
+
 </html>
