--- a/project1/project.html
+++ b/project1/project.html
@@ -2,37 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>l'eau</title>
-		<meta name="description" content="A third person open world adventure game where the player explores a mysterious desert with the end goal of building a paradise oasis for the stranded creatures in this world.">
-		<link rel="stylesheet" href="/css/documentation.css" />
+		<link rel="shortcut icon" href="/media/favicon.png">
+		<title>eau.web redirect</title>
+
+		<link rel="stylesheet" href="/css/global.css" />
+		<link rel="stylesheet" href="/css/project.css" />
 	</head>
 	<body>
-		<section class="Absolute TopLeft LastAppear">
-			<div class="">
-				<a href="/">
-					Back
-				</a>
-			</div>
-		</section>
+		<nav class="Absolute" id="TopLeft">
+			<a class="CircleButton FlexCenter" id="Back" href="/"> </a>
+		</nav>
 
-		<section class="Absolute TopRight LastAppear">
-			<div class="">
-				<a href="/proposal.html">
-					Top Right / Project About
-				</a>
-			</div>
+		<section class="Absolute FlexCenter" id="Center">
+			<h1>
+				to be continue...
+			</h1>
 		</section>
-
-		<section class="Absolute Bottom LastAppear">
-			<div class="">
-				<a href="/project.html">
-					Bottom Project Enter
-				</a>
-			</div>
-		</section>
-
-		<section class="Absolute Center">
-			Center
-		</section>
-		<script src="js/bsync.js" />
 </html>
