--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -2,37 +2,32 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>l'eau</title>
-		<meta name="description" content="A third person open world adventure game where the player explores a mysterious desert with the end goal of building a paradise oasis for the stranded creatures in this world.">
-		<link rel="stylesheet" href="/css/documentation.css" />
+		<link rel="shortcut icon" href="/media/favicon.png">
+		<title>proposal</title>
+
+		<link rel="stylesheet" href="/css/global.css" />
+		<link rel="stylesheet" href="/css/proposal.css" />
 	</head>
 	<body>
-		<section class="Absolute TopLeft">
-			<div class="">
-				<a href="/">
-					Back
-				</a>
-			</div>
-		</section>
+		<nav class="Absolute" id="TopLeft">
+			<a class="CircleButton FlexCenter" id="Back" href="/"> </a>
+		</nav>
 
-		<section class="Absolute TopRight">
-			<div class="">
-				<a href="/proposal.html">
-					Top Right / Project About
-				</a>
-			</div>
-		</section>
+		<section class="Absolute" id="Center">
+			<h1>
+				proposal
+			</h1>
+			<hr>
+			<p>
+				l'eau.web is an interactive web app made to promote l'eau, an adventure game where the main goal is to build an oasis in the middle of a post-apocalyptic desert.
+			</p>
 
-		<section class="Absolute Bottom">
-			<div class="">
-				<a href="/project.html">
-					Bottom Project Enter
-				</a>
-			</div>
-		</section>
+			<p>
+				The web app will have 3 pages, one for the the world, one for the characters, and lastly a credit page. these pages let user explore and learn more about the l'eau universe.
+			</p>
 
-		<section class="Absolute Center">
-			Center
+			<p>
+				The main goal of the web app is to sell the idea behind l'eau.
+			</p>
 		</section>
-		<script src="js/bsync.js" />
 </html>
