Update all link to point to relative path

--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="shortcut icon" href="/media/favicon.png">
+	<link rel="shortcut icon" href="./media/favicon.png">
 	<title>eau</title>
-	<link rel="stylesheet" href="/css/global.css" />
-	<link rel="stylesheet" href="/css/documentation.css" /> </head>
+	<link rel="stylesheet" href="./css/global.css" />
+	<link rel="stylesheet" href="./css/documentation.css" /> </head>
 
 <body>
 	<nav class="Absolute" id="TopLeft">
-		<a class="CircleButton FlexCenter" id="Back" href="/"> </a>
+		<a class="CircleButton FlexCenter" id="Back" href="./"> </a>
 	</nav>
 	<section class="Absolute" id="Center">
 		<h1>
