--- a/project1/project.html
+++ b/project1/project.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="/media/favicon.png">
+		<link rel="shortcut icon" href="./media/favicon.png">
 		<title>eau.web redirect</title>
 
-		<link rel="stylesheet" href="/css/global.css" />
-		<link rel="stylesheet" href="/css/project.css" />
+		<link rel="stylesheet" href="./css/global.css" />
+		<link rel="stylesheet" href="./css/project.css" />
 	</head>
 	<body>
 		<nav class="Absolute" id="TopLeft">
-			<a class="CircleButton FlexCenter" id="Back" href="/"> </a>
+			<a class="CircleButton FlexCenter" id="Back" href="./"> </a>
 		</nav>
 
 		<section class="Absolute FlexCenter" id="Center">
