--- a/project1/index.html
+++ b/project1/index.html
@@ -6,22 +6,22 @@
 	<title>l'eau.web.meta</title>
 	<meta name="description" content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
 
-	<link rel="stylesheet" href="/css/global.css" />
-	<link rel="stylesheet" href="/css/index.css" />
+	<link rel="stylesheet" href="./css/global.css" />
+	<link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
 
 	<nav class="Absolute LastAppear" id="TopLeft">
-		<a class="CircleButton FlexCenter" id="Documentation" href="/documentation.html"> </a>
+		<a class="CircleButton FlexCenter" id="Documentation" href="./documentation.html"> </a>
 	</nav>
 
 	<nav class="Absolute LastAppear" id="TopRight">
-		<a class="CircleButton FlexCenter" id="Proposal" href="/proposal.html"></a>
+		<a class="CircleButton FlexCenter" id="Proposal" href="./proposal.html"></a>
 	</nav>
 
 	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
-		<a class="BubbleButton FlexCenter" href="/project.html">
+		<a class="BubbleButton FlexCenter" href="./project.html">
 			enter
 		</a>
 	</nav>
