Fix validation error

--- a/project1/index.html
+++ b/project1/index.html
@@ -33,14 +33,14 @@
 		<h3 id="Description"> the making of leau.web </h3>
 	</section>
 
-	<section class="Absolute FlexCenter" id="Copyright">
+	<div class="Absolute FlexCenter" id="Copyright">
 		<p>
 	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">
-	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="cc" />
+	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="cc" alt="GPLv3" />
 	    </a>
 	    This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
 		</p>
-	</section>
+	</div>
 </body>
 
 </html>
