--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -23,7 +23,7 @@
 			</p>
 
 			<p>
-				The web app will have 3 pages, one for the the world, one for the characters, and lastly a credit page. these pages let user explore and learn more about the l'eau universe.
+				The web app will have 3 pages: one for the the world, one for the characters, and lastly a credit page. These pages let user explore and learn more about the l'eau universe.
 			</p>
 
 			<p>
