Update doc on media

--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -22,7 +22,8 @@
 			<li> Everything in this website was built from scratch. </li>
 			<li> The changelog content was updated as the work is done. The date was generated using my custom editor extension for Atom. The source can be found <a href="https://github.com/louisgv/dotfiles/blob/jojo/.atom/init.coffee">here</a>. </li>
 			<li> l'eau means "water" in French, hence the droplet animation. </li>
-			<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which was also my design. </li>
+			<li> The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a> </li>
+			<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
 		</ul>
 		<h2>changelog</h2>
 		<ul>
