--- a/project1/index.html
+++ b/project1/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>l'eau.web.meta</title>
+	<link rel="shortcut icon" href="./media/favicon.png">
+	<title>eau.web.meta</title>
 	<meta name="description" content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
 
 	<link rel="stylesheet" href="./css/global.css" />
