--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Lab's 230 Page</title>
+	   <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-
+    <section id="Center">
+      <h1>Lab's 230 Page</h1>
+      https://people.rit.edu/~spbics/230-03.shtml
+    </section>
   </body>
 </html>
