--- a/project1/index.html
+++ b/project1/index.html
@@ -36,8 +36,8 @@
 
 	<div class="Absolute FlexCenter" id="Copyright">
 		<p>
-	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">
-	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="cc" alt="GPLv3" />
+	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
+	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
 	    </a>
 	    This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
 		</p>
