--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Lab's 230 Page</title>
-	   <link rel="stylesheet" href="./css/index.css" />
-  </head>
-  <body>
-    <section id="Center">
-      <h1>Lab's 230 Page</h1>
-      https://people.rit.edu/~spbics/230-03.shtml
-    </section>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="./media/favicon.png">
+  <title>ab's 230 Page</title>
+  <link rel="stylesheet" href="./css/global.css" />
+  <link rel="stylesheet" href="./css/index.css" />
+</head>
+
+<body>
+  <nav class="Absolute" id="TopLeft">
+    <a class="CircleButton FlexCenter" id="Back" href="https://people.rit.edu/~spbics/230-03.shtml"> </a>
+  </nav>
+
+  <section id="Center" class="Absolute">
+    <h1>Lab's 230 Page</h1>
+    <a href="https://people.rit.edu/~spbics/230-03.shtml"> </a>
+    <ul>
+      <li>A level-1 heading that reads "YOUR NAME's 230 Page" (replacing "YOUR NAME" with your own name, obviously)</li>
+      <li>A <strong>recognizable</strong> photo of yourself (not the back of your head, not a drawing, not you wearing a mask)</li>
+      <li>A brief bio about yourself (a paragaph will do), telling me about your interests and your goals; what do you hope to get out of the class, your major, your time at RIT, and where do you want to be when you graduate?</li>
+      <li>Placeholder links to the following:
+        <ul>
+          <li>Each of the 3 class projects</li>
+          <li>Your in-class exercises (which will be added as links every day); just include a section on the page for these</li>
+        </ul>
+      </li>
+      <li>A link back to our class list page (see below)</li>
+      <li>A link to your GitHub repo for this class</li>
+      <li>A pleasing (or at least tolerable) color scheme and layout, using your <a href="http://www.presentationzen.com/chapter6_spread.pdf">CRAP</a> principles and other design guidelines</li>
+      <li>You should use an <em>external CSS</em> file for all of your styles.</li>
+      <li>Your CSS should include at least 2 ID and 2 classes</li>
+      <li>You must also change all the anchors on your page to match your color scheme (changing all four states)</li>
+      <li>Your page needs to pass W3C <a href="https://validator.w3.org/">HTML</a> and <a href="http://jigsaw.w3.org/css-validator/">CSS</a> validation
+        <ul>
+          <li>In order to pass and be legible, you also need to <em>fix Banjo</em>. If you don't do this, you will lose points on <strong>every</strong> assignment.</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</body>
+
 </html>
