--- a/project1/index.html
+++ b/project1/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="./media/favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
+
 	<title>eau.web.meta</title>
 	<meta name="description" content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
 
