Finish week2 hw

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -36,24 +36,27 @@
 
     <section id="Projects">
       <h2>Projects</h2>
-      <ol>
-        <li>Project 1</li>
 
-        <li>Project 2</li>
+      <div id="ProjectLinksContainer" class="FlexSpaceAround">
+        <a class="BubbleButton FlexCenter" href="./project1/">Project 1</a>
+        <a class="BubbleButton FlexCenter" href="./project2/">Project 2</a>
+        <a class="BubbleButton FlexCenter" href="./project3/">Project 3</a>
+      </div>
 
-        <li>Project 3</li>
-      </ol>
     </section>
 
     <section id="Exercises">
       <h2>Exercises</h2>
-      <ol>
-        <li>Exercise 1</li>
 
-        <li>Exercise 2</li>
+      <div id="ProjectLinksContainer" class="FlexSpaceAround">
+        <a class="BubbleButton FlexCenter" href="https://github.com/louisgv/1217-230/tree/master/week1">
+          Week 1
+        </a>
+        <a class="BubbleButton FlexCenter" href="https://github.com/louisgv/1217-230/tree/master/week2">
+          Week 2
+        </a>
+      </div>
 
-        <li>Exercise 3</li>
-      </ol>
     </section>
   </div>
 
@@ -91,6 +94,14 @@
       </svg>
     </a>
   </div>
+
+  <div class="Fixed FlexCenter" id="Copyright">
+		<p id="CopyrightText">
+	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
+	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
+	    </a>This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
+		</p>
+	</div>
 </body>
 
 </html>
