Refactor navigation, expand button. Ready to revision

--- a/project1/index.html
+++ b/project1/index.html
@@ -15,12 +15,10 @@
 
 <body>
 
-	<nav class="Absolute LastAppear" id="TopLeft">
-		<a class="CircleButton FlexCenter" id="Documentation" href="./documentation.html"> </a>
-	</nav>
-
-	<nav class="Absolute LastAppear" id="TopRight">
-		<a class="CircleButton FlexCenter" id="Proposal" href="./proposal.html"></a>
+	<nav class="Absolute" id="Top">
+		<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> doc </a>
+		<a class="BubbleButton FlexCenter ActiveButton" id="Index"> home </a>
+		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> about </a>
 	</nav>
 
 	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
@@ -36,14 +34,14 @@
 		<h3 id="Description"> the making of leau.web </h3>
 	</section>
 
-	<div class="Absolute FlexCenter" id="Copyright">
+	<footer class="Fixed FlexCenter" id="Copyright">
 		<p>
 	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
 	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
 	    </a>
 	    This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
 		</p>
-	</div>
+	</footer>
 </body>
 
 </html>
