--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -11,9 +11,13 @@
 	<link rel="stylesheet" href="./css/documentation.css" /> </head>
 
 <body>
-	<nav class="Absolute" id="TopLeft">
-		<a class="CircleButton FlexCenter" id="Back" href="./"> </a>
+	<nav class="Absolute" id="Top">
+		<a class="BubbleButton FlexCenter ActiveButton" id="Documentation" href="./documentation.html"> doc </a>
+		<a class="BubbleButton FlexCenter" id="Home" href="./"> home </a>
+		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> about </a>
 	</nav>
+
+
 	<section class="Absolute" id="Center">
 		<h1>
 				documentation
@@ -40,6 +44,15 @@
 			<li> 8/3/2017, 9:45:18 AM: Initialize project and planning for layout </li>
 		</ul>
 	</section>
+
+	<footer class="Fixed FlexCenter" id="Copyright">
+		<p>
+	    <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
+	      <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
+	    </a>
+	    This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
+		</p>
+	</footer>
 
 </body>
 
