--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -10,8 +10,10 @@
 		<link rel="stylesheet" href="./css/proposal.css" />
 	</head>
 	<body>
-		<nav class="Absolute" id="TopLeft">
-			<a class="CircleButton FlexCenter" id="Back" href="./"> </a>
+		<nav class="Absolute" id="Top">
+			<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> doc </a>
+			<a class="BubbleButton FlexCenter" id="Home" href="./"> home </a>
+			<a class="BubbleButton FlexCenter ActiveButton" id="Proposal" href="./proposal.html"> about </a>
 		</nav>
 
 		<section class="Absolute" id="Center">
@@ -31,4 +33,13 @@
 				The main goal of the web app is to sell the idea behind l'eau.
 			</p>
 		</section>
+
+		<footer class="Fixed FlexCenter" id="Copyright">
+			<p>
+				<a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
+					<img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
+				</a>
+				This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
+			</p>
+		</footer>
 </html>
