Fixing link for main

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -47,15 +47,31 @@
 
     <section id="Exercises">
       <h2>Exercises</h2>
+			<br>
+			<h3>Week 1</h3>
 
       <div id="ProjectLinksContainer" class="FlexSpaceAround">
-        <a class="BubbleButton FlexCenter" href="https://github.com/louisgv/1217-230/tree/master/week1">
-          Week 1
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/auth/">
+          auth
         </a>
-        <a class="BubbleButton FlexCenter" href="https://github.com/louisgv/1217-230/tree/master/week2">
-          Week 2
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/">
+          noterror
         </a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/s">
+					error
+				</a>
       </div>
+
+			<h3>Week 2</h3>
+
+			<div id="ProjectLinksContainer" class="FlexSpaceAround">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/">
+					230 page
+				</a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/">
+					ICE
+				</a>
+			</div>
 
     </section>
   </div>
