--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -68,8 +68,8 @@
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/">
 					230 page
 				</a>
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/">
-					ICE
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/recipe/kadayif.html">
+					Recipe ICE
 				</a>
 			</div>
 
