Fix validation error

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -37,7 +37,7 @@
     <section id="Projects">
       <h2>Projects</h2>
 
-      <div id="ProjectLinksContainer" class="FlexSpaceAround">
+      <div class="FlexSpaceAround ProjectLinksContainer">
         <a class="BubbleButton FlexCenter" href="./project1/">Project 1</a>
         <a class="BubbleButton FlexCenter" href="./project2/">Project 2</a>
         <a class="BubbleButton FlexCenter" href="./project3/">Project 3</a>
@@ -50,7 +50,7 @@
 			<br>
 			<h3>Week 1</h3>
 
-      <div id="ProjectLinksContainer" class="FlexSpaceAround">
+      <div class="FlexSpaceAround ProjectLinksContainer">
         <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/auth/">
           auth
         </a>
@@ -64,7 +64,7 @@
 
 			<h3>Week 2</h3>
 
-			<div id="ProjectLinksContainer" class="FlexSpaceAround">
+			<div class="FlexSpaceAround ProjectLinksContainer">
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/">
 					230 page
 				</a>
