--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -69,9 +69,21 @@
 					230 page
 				</a>
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/recipe/kadayif.html">
-					Recipe ICE
+					recipe
 				</a>
 			</div>
+
+			<h3>Week 3</h3>
+
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/tables/tables.html">
+					tables
+				</a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/nav/page1.html">
+					nav
+				</a>
+			</div>
+
 
     </section>
   </div>
