--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -82,6 +82,9 @@
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/nav/page1.html">
 					nav
 				</a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/nav2/age.html">
+					nav2
+				</a>
 			</div>
 
 
