Update home page

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -85,6 +85,9 @@
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/nav2/age.html">
 					nav2
 				</a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week3/menu/">
+					menu
+				</a>
 			</div>
 
 
