Fix max-device width

--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -33,15 +33,16 @@
 		</ul>
 		<h2>changelog</h2>
 		<ul>
+			<li> 9/10/2017, 7:14:41 AM: Refactor max-device-width to max-width </li>
 			<li> 9/3/2017, 2:29:39 PM: Refactor animation </li>
 			<li> 9/3/2017, 2:08:44 PM: Add license notice </li>
 			<li> 9/3/2017, 1:41:23 PM: Finalize styling for documentation.html </li>
 			<li> 9/3/2017, 11:30:12 AM: Finalize styling for proposal.html </li>
 			<li> 9/3/2017, 9:27:30 AM: Refactor reusable style into global.css </li>
 			<li> 9/3/2017, 8:10:27 AM: Finalize layout for index.html </li>
-			<li> 8/3/2017, 3:20:18 PM: Finalize page design and conceptualization </li>
-			<li> 8/3/2017, 2:30:25 PM: Finalize content for each pages </li>
-			<li> 8/3/2017, 9:45:18 AM: Initialize project and planning for layout </li>
+			<li> 9/2/2017, 3:20:18 PM: Finalize page design and conceptualization </li>
+			<li> 9/2/2017, 2:30:25 PM: Finalize content for each pages </li>
+			<li> 9/2/2017, 9:45:18 AM: Initialize project and planning for layout </li>
 		</ul>
 	</section>
 
