--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -21,17 +21,29 @@
 				proposal
 			</h1>
 			<hr>
-			<p>
-				l'eau.web is an interactive web app made to promote l'eau, an adventure game where the main goal is to build an oasis in the middle of a post-apocalyptic desert.
-			</p>
+			<article class="FadeInArticle">
+				<p>
+					l'eau.web is an interactive web app made to promote l'eau, an adventure game where the main goal is to build an oasis in the middle of a post-apocalyptic desert.
+				</p>
 
-			<p>
-				The web app will have 3 pages: one for the the world, one for the characters, and lastly a credit page. These pages let user explore and learn more about the l'eau universe.
-			</p>
+				<p>
+					The web app will have 3 pages. The first page is titled "the world". It contains a list of location the player will be explore in the main game. These locations will be contained in a card element, which will expand as the user click on them.
+				</p>
 
-			<p>
-				The main goal of the web app is to sell the idea behind l'eau.
-			</p>
+				<p>
+					The second page is titled "characters." It contains a list of characters from the game, each also in a card, with description and their roles in the universe.
+				</p>
+
+				<p>
+					Lastly, a "credit" page which reference the project and the team member involved, each also contained in a card element.
+				</p>
+
+				<p>
+					The overall goal of the web app is make visitor be interested in the unniverse behind l'eau by allowing them to explore and learn trivia non-spoiler detail about the l'eau universe.
+				</p>
+
+
+			</article>
 		</section>
 
 		<footer class="Fixed FlexCenter" id="Copyright">
