--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -90,6 +90,15 @@
 				</a>
 			</div>
 
+      <h3>Week 4</h3>
+
+      <div class="FlexSpaceAround ProjectLinksContainer">
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week4/darth/darth.html">
+          darth
+        </a>
+
+      </div>
+
 
     </section>
   </div>
