Update proposal to match with new rubric

--- a/project1/index.html
+++ b/project1/index.html
@@ -18,12 +18,12 @@
 	<nav class="Absolute" id="Top">
 		<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> doc </a>
 		<a class="BubbleButton FlexCenter ActiveButton" id="Index"> home </a>
-		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> about </a>
+		<a class="BubbleButton FlexCenter" id="Proposal" href="./project.html"> project </a>
 	</nav>
 
 	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
-		<a class="BubbleButton FlexCenter" href="./project.html">
-			enter
+		<a class="BubbleButton FlexCenter" href="./proposal.html">
+			proposal
 		</a>
 	</nav>
 
